* 2014-04-16 - tobias.friedrich@open-xchange.com

 - Fix for bug 32076: Process images of imported contacts in a serialized way  

* 2014-04-15 - tobias.friedrich@open-xchange.com

 - Fix for bug 32060: Require valid module in autocomplete request 

* 2014-04-14 - tobias.friedrich@open-xchange.com

 - Fix for bug 32004: Use default type for folders below infostore trash 

* 2014-04-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 31993: Don't rely on "day of year" comparison in leap years 

* 2014-04-10 - marc.arens@open-xchange.com

 - Fix for bug 31942: Fix for unconsumed request remainders and configure that we want to accept payloads for methods where a payload is
                      currently undefined but not forbidden.
 
* 2014-04-10 - tobias.friedrich@open-xchange.com

 - Fix for bug 29950: Require "write own objects" permissions when creating files via WebDAV 

* 2014-04-10 - thorben.betten@open-xchange.com

 - Fix for bug 31828: Honor possible surrogate pairs when splitting a string during mail-safe conversion
 - Fix for bug 31987: Extended infostore document tables by the (`cid`, `file_md5sum`) index
 - Fix for bug 31826: Keep unicode representation for special HTML entities

* 2014-04-09 - marc.arens@open-xchange.com

 - Fix for bug 31974: Don't lookup ssl attributes on an unsecure request
 
* 2014-04-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 31966: Check for quota exceptions from external storages, too 

* 2014-04-09 - thorben.betten@open-xchange.com

 - Fix for bug 31968: Drop personal infostore folders on user deletion
 - Fix for bug 31978: Added proper i18n error display message for error code APP-0093
 - Fix for bug 31962: Fixed request watcher runs

* 2014-04-07 - thorben.betten@open-xchange.com

 - Fix for bug 31929: Support quota for attachments of PIM objects

* 2014-07-07 - ioannis.chouklis@open-xchange.com

 - Fix for bug 26544: Get all attachments sorted by ID fails

* 2014-04-07 - martin.schneider@open-xchange.com
